<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingVertical="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

           >


            <ImageView
                android:id="@+id/coin_imageview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/coin_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/coin_imageview"
                app:layout_constraintStart_toEndOf="@id/coin_imageview"
                app:layout_constraintTop_toTopOf="@+id/coin_imageview"
                tools:text="Bitcoin" />


            <LinearLayout
                android:id="@+id/description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/coin_imageview">

                <TextView
                    android:id="@+id/coin_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/sf_pro_text_semibold"
                    android:text="@string/description"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/coin_description_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_text_regular"
                    android:textAlignment="textStart"
                    android:textColor="@color/textGrey"
                    android:textSize="14sp"
                    tools:text="Bitcoin" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/has_algorithm_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/description_layout">

                <TextView
                    android:id="@+id/coin_hash_algorithm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/sf_pro_text_semibold"
                    android:text="@string/hash_algorithm"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/coin_hash_algorithm_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_text_regular"
                    android:textAlignment="textStart"
                    android:textColor="@color/textGrey"
                    android:textSize="14sp"
                    tools:text="Bitcoin" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/current_price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/has_algorithm_layout">

                <TextView
                    android:id="@+id/coin_current_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/sf_pro_text_semibold"
                    android:text="@string/current_price"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/coin_current_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_text_regular"
                    android:textAlignment="textStart"
                    android:textColor="@color/textGrey"
                    android:textSize="14sp"
                    tools:text="Bitcoin" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/change_percentage_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/current_price_layout">

                <TextView
                    android:id="@+id/coin_change_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/sf_pro_text_semibold"
                    android:text="@string/change_percentage"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/coin_change_percentage_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_text_regular"
                    android:textAlignment="textStart"
                    android:textColor="@color/textGrey"
                    android:textSize="14sp"
                    tools:text="Bitcoin" />
            </LinearLayout>


            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/add_favourite_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="invisible">

        <EditText
            android:id="@+id/coin_timer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="0.75"
            android:background="@drawable/serachview_background"
            android:hint="@string/yenileme_zaman_giriniz"
            android:inputType="number"
            android:paddingHorizontal="5dp" />

        <Button
            android:id="@+id/add_fav_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="0.25"
            android:text="@string/favoriye_ekle"
            android:textAllCaps="false"
            android:textSize="12sp" />


    </LinearLayout>

</RelativeLayout>
